--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   build_runner: ^2.4.11
   auto_route_generator: ^8.0.0
   url_launcher: ^6.3.1
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
