--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   auto_route_generator: ^8.0.0
   url_launcher: ^6.3.1
   visibility_detector: ^0.4.0+2
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
