--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   url_launcher: ^6.3.1
   visibility_detector: ^0.4.0+2
   shared_preferences: ^2.3.2
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
